# kubgrupp_rs

./: .gitignore  Cargo.toml  build_shaders.py  run.sh
resources/scenes/: ajax-point.toml  cubes.toml  diffuse.toml  kubgrupp.toml  procedural.toml  stresser.toml
resources/shaders/: black.rmiss  checkerboard.rchit  dielectric.rchit  diffuse-checkerboard.rchit  diffuse.rchit  diffuse_checkerboard.rchit  directional_emitter.rchit  disc.rint  emitter.rchit  emitter_sampling.glsl  flat.rchit  flattuah.rchit  hit_common.glsl  hitcommon.glsl  mesh_common.glsl  microfacet.rchit  mirror.rchit  normals.rchit  path.rgen  procedural_diffuse.rchit  random.glsl  ray_common.glsl  raycommon.glsl  raygen.rgen  raygen_common.glsl  sampling.glsl  simple.rgen  sphere.rint
src/: camera.rs  features.rs  main.rs  render.rs  scene.rs  utils.rs  window.rs
src/render/renderers/: raster.rs  raytrace.rs
src/scene/: scenes.rs  type_lexer.rs
src/scene/scenes/: mesh.rs
