[package]
name = "kg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.20.0", features = ["extern_crate_alloc"] }
env_logger = "0.11.5"
glam = { version = "0.29.2", features = ["bytemuck"] }
gpu-allocator = "0.27.0"
log = "0.4.22"
presser = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
tobj = "4.0.2"
toml = { version = "0.8.19" }
winit = "0.30.5"
